[package]
name = "pump"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
solana-program = "=1.16.25"
toml_datetime = "=0.6.1"
num_enum = "=0.7.1"
chrono = "0.4"
raydium-contract-instructions = { git = "https://github.com/raydium-io/raydium-contract-instructions.git" }